fix next article spacing

--- a/src/templates/blogTemplate.scss
+++ b/src/templates/blogTemplate.scss
@@ -168,6 +168,7 @@
     a {
       display: inline-block;
       padding: 0 $spacing-unit;
+      margin: $spacing-unit 0;
       line-height: 1.5;
       vertical-align: middle;
       text-decoration: none;
